--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -16,7 +16,7 @@ En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette 
 %% http://www.who.int/healthinfo/global_burden_disease/2004_report_update/en/
 
 \paragraph{}
- Bien que de nombreuses recherches soient financées sur le sujet, beaucoup d'interrogations   règnent encore sur cette maladie. D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problème physique, chimique, biologique, épidémiologique, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patients ? 
+ Bien que de nombreuses recherches soient financées sur le sujet, beaucoup d'interrogations   règnent encore sur cette maladie. D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problème physique, chimique, biologique, épidémiologique, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patient ? 
  
 \paragraph{}
 Les travaux présentés ici s'inscrivent pleinement dans cette démarche. Ils constituent un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques. 
@@ -35,7 +35,7 @@ A l'heure actuelle, pour mesurer l'efficacité d'un traitement, le corps médica
 Les interrogations précédemment posées seront abordées dans ce manuscrit au travers de ses différents chapitres. 
 
 \paragraph{}
-Le premier chapitre est dédié à la présentation des aspects biologiques et cliniques du cancer.  Il présente non pas de manière exhaustive tous les mécanismes du cancer, mais ceux nécessaire à la compréhension des choix réalisés dans la modélisation. La croissance d'une tumeur sera d'abord présentée. Puis sera abordé, la manière dont les métastases se disséminent. Les différents types de traitements seront ensuite présentés. La seule et unique source d'informations cliniques que nous ayant étant des images scanners, nous nous devons de comprendre comment ce type d'image est acquises. Nous discuterons ensuite du critère RECIST et de ses limitations avant de terminer par les spécificité des métastases hépatiques de GISTs.
+Le premier chapitre est dédié à la présentation des aspects biologiques et cliniques du cancer.  Il présente non pas de manière exhaustive tous les mécanismes du cancer, mais ceux nécessaire à la compréhension des choix réalisés dans la modélisation. La croissance d'une tumeur sera d'abord présentée. Puis sera abordé, la manière dont les métastases se disséminent. Les différents types de traitements seront ensuite présentés. La seule et unique source d'informations cliniques que nous ayant étant des images scanners, nous nous devons de comprendre comment ce type d'image est acquises. Nous discuterons ensuite du critère RECIST et de ses limitations avant de terminer par les spécificités des métastases hépatiques de GISTs.
 
 
 \paragraph{}
