Correction de Francois sur Intro

--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -16,12 +16,23 @@ En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette 
 %% http://www.who.int/healthinfo/global_burden_disease/2004_report_update/en/
 
 \paragraph{}
- Bien que de nombreuses recherches soient financées sur le sujet, beaucoup d'interrogations   règnent encore sur cette maladie. D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problème physique, chimique, biologique, épidémiologique, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patient ? 
+De nombreuses études fondamentales, pré-cliniques ou cliniques ont déjà été réalisées afin de mieux comprendre les mécanismes impliqués dans la genèse et le développement du cancer. De même, de nombreux travaux ont permis d'apprécier la réponse aux traitements. Toutefois, il persiste encore beaucoup d'interrogations sur cette maladie. De nouvelles méthodes d'exploration et de compréhension sont donc nécessairement à développer.
+% Bien que de nombreuses recherches soient financées sur le sujet, beaucoup d'interrogations règnent encore sur cette maladie. 
+ D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problème physique, chimique, biologique, épidémiologique, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patient ? 
  
 \paragraph{}
 Les travaux présentés ici s'inscrivent pleinement dans cette démarche. Ils constituent un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques. 
-Plus particulièrement, il s'agit là de proposer un modèle mathématique décrivant la croissance de métastases (tumeurs filles) hépatiques en provenance de cancer du stroma\footnote{Tissu de soutien, non impliqué dans la fonction première de l'organe.} gastroinstestinal (GIST). Ce type de cancer touche de 9 à 14 cas par million de personnes par an~\cite{Nilsson2005}. Dans 25\% des cas, ce cancer migre vers le foie~\cite{Nilsson2005}. Ces métastases sont connues pour être relativement résistantes aux traitements anti-cancéreux, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
-
+Plus particulièrement, il s'agit là de proposer un modèle mathématique décrivant la croissance de métastases 
+%(tumeurs filles) 
+(localisations secondaires disséminées à partir d’une lésion primitive)
+hépatiques en provenance d'une  
+tumeur stromale\footnote{Le stroma est un tissu de soutien, non impliqué dans la fonction première de l'organe.} de l'intestin grêle
+%cancer du stroma\footnote{Tissu de soutien, non impliqué dans la fonction première de l'organe.} gastroinstestinal  
+(GIST).
+Ce type de cancer touche de 9 à 14 cas par million de personnes par an~\cite{Nilsson2005}. Dans 25\% des cas, ce cancer migre vers le foie~\cite{Nilsson2005}. 
+%%Ces métastases sont connues pour être relativement résistantes aux traitements anti-cancéreux, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
+%Ces métastases peuvent être résistantes aux traitements conventionnels comme la chimiothérapie ou la radiothérapie. Ainsi d'autres thérapeutiques ont été proposées comme les inhibiteurs de la tyrosine kinase ou les traitements anti-angiogéniques.  Malheureusement, en fonction des mutations rencontrées ou acquises, des résistances à ces traitements peuvent également être rencontrées sur ce type de métastases, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
+En fonction des mutations rencontrées ou acquises, ces métastases peuvent être résistantes aussi bien aux traitements conventionnels (comme la chimiothérapie ou la radiothérapie) qu'aux nouvelles thérapies ciblées (comme les inhibiteurs de la tyrosine kinase ou les traitements anti-angiogéniques), ce qui donne un intérêt certain à la modélisation de leurs comportements. 
 
 \paragraph{}
 Le suivi clinique des patients sous traitement est assuré par des scanners réguliers, réalisés généralement tous les deux mois.  
