--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -387,7 +387,7 @@ Version du \today, \printtime
 
 %%\updatechaptername
 %%\renewcommand\chaptername{Sommaire}
-\pagestyle{plain}
+\pagestyle{plain} \cleardoublepage
 %%\setcounter{tocdepth}{5}
 \addcontentsline{toc}{chapter}{Sommaire}
 \tableofcontents    % Table des matières
